corrected resource handling